--- a/trab3/index.html
+++ b/trab3/index.html
@@ -46,7 +46,7 @@
             <picture>
                 <source srcset="imgs/cadeira-chique-media.webp" media="(min-width:1200px)">
                 <source srcset="imgs/cadeira-chique-pequena.webp" media="(min-width:375px)">
-                <img src="cadeira-chique-grande.webp" 
+                <img src="cadeira-chique-grande.webp" fetchpriority="high"
                     alt="Uma cadeira chique."
                     width="1918" height="1918" 
                     class="big-img">
