--- a/trab3/index.html
+++ b/trab3/index.html
@@ -122,6 +122,7 @@
                                 <label for="color">Informe sua cor favorita (Pergunta importante):</label>
                                 <input type="color" name="color" id="color">
                             </div>
+                            <input type="submit">
                         </fieldset>
                     </form>
                 </div>
