--- a/trab4/index.html
+++ b/trab4/index.html
@@ -165,7 +165,7 @@
                                 <label for="color">Informe sua cor favorita (Pergunta importante):</label>
                                 <input type="color" name="color" id="color">
                             </div>
-                            <input type="submit">
+                            <input type="submit" value="Enviar">
                         </fieldset>
                     </form>
                 </div>
@@ -194,9 +194,9 @@
             <p class="centered-text">Aqui está um belíssimo carrossel com imagens do nosso painel de fotos, para que você possa vê-las de maneira <b>chique</b>.</p>
             <div id="carrosselBS" class="carousel slide">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="0" class="active" aria-current="true"></button>
-                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="1"></button>
-                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="0" class="active" aria-current="true" value=""></button>
+                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="1" value=""></button>
+                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="2" value=""></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -214,11 +214,11 @@
                     </div>
                 </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carrosselBS" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carrosselBS" data-bs-slide="prev" value="">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 </button>
 
-                <button class="carousel-control-next" type="button" data-bs-target="#carrosselBS" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carrosselBS" data-bs-slide="next" value="">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
                 
