--- a/trab4/index.html
+++ b/trab4/index.html
@@ -194,9 +194,9 @@
             <p class="centered-text">Aqui está um belíssimo carrossel com imagens do nosso painel de fotos, para que você possa vê-las de maneira <b>chique</b>.</p>
             <div id="carrosselBS" class="carousel slide">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="0" class="active" aria-current="true" value=""></button>
-                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="1" value=""></button>
-                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="2" value=""></button>
+                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="0" class="active" aria-current="true" value="Imagem 1"></button>
+                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="1" value="Imagem 2"></button>
+                    <button type="button" data-bs-target="#carrosselBS" data-bs-slide-to="2" value="Imagem 3"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -214,11 +214,11 @@
                     </div>
                 </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carrosselBS" data-bs-slide="prev" value="">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carrosselBS" data-bs-slide="prev" value="Voltar">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 </button>
 
-                <button class="carousel-control-next" type="button" data-bs-target="#carrosselBS" data-bs-slide="next" value="">
+                <button class="carousel-control-next" type="button" data-bs-target="#carrosselBS" data-bs-slide="next" value="Seguir">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
                 
